Update 'lvfx17xd9-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:cd7da83d20f94f311f069d5b61daae4fae157098@sha256:a74a127311cb7ad59d059607394a300e4e5b275253fcaf7fdfb482c18d1fe1a3

--- a/components/lvfx17xd9-python/overlays/development/deployment-patch.yaml
+++ b/components/lvfx17xd9-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: lvfx17xd9-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:cd7da83d20f94f311f069d5b61daae4fae157098@sha256:a74a127311cb7ad59d059607394a300e4e5b275253fcaf7fdfb482c18d1fe1a3
+          name: container-image
